# hw2-variant-a

./: .gitignore  README.md  pyproject.toml
src/leave_system/: app.py  app_engine.py  db.py  models.py
src/leave_system/services/: auth.py  leave_service.py
src/leave_system/templates/: basic_template.jinja2  leave_request.jinja2  leave_table_macro.jinja2
tests/: test_example.py
