[tool.poetry]
name = "leave-system"
version = "0.1.0"
description = ""
authors = ["Piti Ongmongkolkul <piti118@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
jinja2 = "^3.1.3"
sqlmodel = "^0.0.14"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
bcrypt = "^4.1.2"
pytest = "^7.4.4"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
